[gd_scene load_steps=40 format=3 uid="uid://botbpg4wpe5fd"]

[ext_resource type="Script" uid="uid://cxtklcmvyciq2" path="res://barkley2/scenes/Objects/_interactiveActor/_prison/o_prison_rioter.gd" id="1_b6cpp"]
[ext_resource type="Texture2D" uid="uid://bcu180cutd8ap" path="res://barkley2/assets/b2_original/images/merged/sPrisonBody.png" id="2_t4j0t"]
[ext_resource type="Texture2D" uid="uid://dqci6x8ydmjux" path="res://barkley2/assets/b2_original/images/merged/sPrisonHead.png" id="3_7v6nt"]
[ext_resource type="Texture2D" uid="uid://ctslvnd2b46sx" path="res://barkley2/assets/b2_original/images/merged/sPrisonFace.png" id="4_wkpuk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1vgi6"]
atlas = ExtResource("2_t4j0t")
region = Rect2(156, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh7iy"]
atlas = ExtResource("2_t4j0t")
region = Rect2(0, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvg1q"]
atlas = ExtResource("2_t4j0t")
region = Rect2(26, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbr35"]
atlas = ExtResource("2_t4j0t")
region = Rect2(52, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxeeq"]
atlas = ExtResource("2_t4j0t")
region = Rect2(78, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_00ben"]
atlas = ExtResource("2_t4j0t")
region = Rect2(104, 0, 26, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6q4x"]
atlas = ExtResource("2_t4j0t")
region = Rect2(130, 0, 26, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_ity6l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vgi6")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh7iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbr35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxeeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00ben")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6q4x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_j7tew"]
atlas = ExtResource("3_7v6nt")
region = Rect2(0, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad2jc"]
atlas = ExtResource("3_7v6nt")
region = Rect2(18, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrtl0"]
atlas = ExtResource("3_7v6nt")
region = Rect2(36, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_0odb3"]
atlas = ExtResource("3_7v6nt")
region = Rect2(54, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jwj0"]
atlas = ExtResource("3_7v6nt")
region = Rect2(72, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_1on2p"]
atlas = ExtResource("3_7v6nt")
region = Rect2(90, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7npy"]
atlas = ExtResource("3_7v6nt")
region = Rect2(108, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdqpv"]
atlas = ExtResource("3_7v6nt")
region = Rect2(126, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvb4i"]
atlas = ExtResource("3_7v6nt")
region = Rect2(144, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyu88"]
atlas = ExtResource("3_7v6nt")
region = Rect2(162, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_svlnc"]
atlas = ExtResource("3_7v6nt")
region = Rect2(180, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm1ji"]
atlas = ExtResource("3_7v6nt")
region = Rect2(198, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_me808"]
atlas = ExtResource("3_7v6nt")
region = Rect2(216, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8uc3"]
atlas = ExtResource("3_7v6nt")
region = Rect2(234, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0dmx"]
atlas = ExtResource("3_7v6nt")
region = Rect2(252, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv5ur"]
atlas = ExtResource("3_7v6nt")
region = Rect2(270, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsj0j"]
atlas = ExtResource("3_7v6nt")
region = Rect2(288, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwyes"]
atlas = ExtResource("3_7v6nt")
region = Rect2(306, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_sil3o"]
atlas = ExtResource("3_7v6nt")
region = Rect2(324, 0, 18, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebnxe"]
atlas = ExtResource("3_7v6nt")
region = Rect2(342, 0, 18, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_oawxk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7tew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad2jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrtl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jwj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1on2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7npy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdqpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvb4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyu88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svlnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm1ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me808")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8uc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0dmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv5ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsj0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwyes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sil3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebnxe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_to07e"]
atlas = ExtResource("4_wkpuk")
region = Rect2(0, 0, 18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_12nmw"]
atlas = ExtResource("4_wkpuk")
region = Rect2(18, 0, 18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayd2a"]
atlas = ExtResource("4_wkpuk")
region = Rect2(36, 0, 18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lptm"]
atlas = ExtResource("4_wkpuk")
region = Rect2(54, 0, 18, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_au2ub"]
atlas = ExtResource("4_wkpuk")
region = Rect2(72, 0, 18, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_12ey4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_to07e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12nmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayd2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lptm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au2ub")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="oPrisonRioter" type="Node2D"]
script = ExtResource("1_b6cpp")

[node name="sPrisonBody" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ity6l")
animation = &"back"
centered = false
offset = Vector2(-13, -31)

[node name="sPrisonHead" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -26)
sprite_frames = SubResource("SpriteFrames_oawxk")
frame = 11
centered = false
offset = Vector2(-9, -21)

[node name="sPrisonFace" type="AnimatedSprite2D" parent="sPrisonHead"]
visible = false
sprite_frames = SubResource("SpriteFrames_12ey4")
centered = false
offset = Vector2(-9, -20)
